objects/Admin3_SF_Account_Sync__e.object
<CustomObject>
    <description>Platform events to capture account creation/modification in Admin3 and sync to R4B Org using API GW.</description>
    <fields>
        <fullName>AccountStatus__c</fullName>
        <label>AccountStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <label>BillingAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerNumber__c</fullName>
        <label>CustomerNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MALID__c</fullName>
        <label>MALID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Admin3 SF Account Sync</label>
    <pluralLabel>Admin3 SF Account Sync</pluralLabel>
</CustomObject>